<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDefaultGray">

    <com.appier.aiqua.view.DefaultActionBarView
        android:id="@+id/view_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/proactive_experiences_desc_part1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_action_bar"

        android:layout_marginTop="30dp"
        android:layout_marginBottom="@dimen/text_proactive_experiences_desc_top_down_margin"
        android:layout_marginLeft="@dimen/text_proactive_experiences_desc_left_right_margin"
        android:layout_marginRight="@dimen/text_proactive_experiences_desc_left_right_margin"

        android:lineSpacingExtra="2.5dp"

        android:text="@string/text_proactive_experiences_desc_part1"
        android:textColor="@color/colorProactiveExperiencesDescText"
        android:textSize="@dimen/text_proactive_experiences_desc_size" />

    <TextView
        android:id="@+id/proactive_experiences_desc_part2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/proactive_experiences_desc_part1"

        android:layout_marginTop="@dimen/text_proactive_experiences_desc_top_down_margin"
        android:layout_marginBottom="@dimen/text_proactive_experiences_desc_top_down_margin"
        android:layout_marginLeft="@dimen/text_proactive_experiences_desc_left_right_margin"
        android:layout_marginRight="@dimen/text_proactive_experiences_desc_left_right_margin"

        android:lineSpacingExtra="2.5dp"

        android:text="@string/text_proactive_experiences_desc_part2"
        android:textColor="@color/colorProactiveExperiencesDescText"
        android:textSize="@dimen/text_proactive_experiences_desc_size" />

    <TextView
        android:id="@+id/proactive_experiences_desc_part3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/proactive_experiences_desc_part2"

        android:layout_marginTop="@dimen/text_proactive_experiences_desc_top_down_margin"
        android:layout_marginBottom="@dimen/text_proactive_experiences_desc_top_down_margin"
        android:layout_marginLeft="@dimen/text_proactive_experiences_desc_left_right_margin"
        android:layout_marginRight="@dimen/text_proactive_experiences_desc_left_right_margin"

        android:lineSpacingExtra="2.5dp"

        android:text="@string/text_proactive_experiences_desc_part2"
        android:textColor="@color/colorProactiveExperiencesDescText"
        android:textSize="@dimen/text_proactive_experiences_desc_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@drawable/layout_goto_product_list_page_bg">

        <Button
            android:id="@+id/btn_goto_product_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/btn_goto_product_category_top_margin"
            android:layout_marginBottom="@dimen/btn_goto_product_category_bottom_margin"

            android:textSize="@dimen/btn_goto_product_category_text_size"
            android:textColor="@color/colorBtngotoProductCategoryPageText"
            android:text="@string/btn_goto_product_category_text"
            android:textAllCaps="false"

            android:background="@drawable/btn_default_bg2"

            android:paddingTop="@dimen/btn_goto_product_category_text_top_down_padding"
            android:paddingBottom="@dimen/btn_goto_product_category_text_top_down_padding"
            android:paddingLeft="@dimen/btn_goto_product_category_text_left_right_padding"
            android:paddingRight="@dimen/btn_goto_product_category_text_left_right_padding"/>

    </RelativeLayout>


</RelativeLayout>